Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Bot parameters
-BOT_TOKEN=''
-ALLOWED_USERNAMES=''
+BOT_TOKEN='7401097514:AAH4p7d1sEiDskDEIWNH-RXqcgKLqXqtwfc'
+ALLOWED_USERNAMES='KatsuHere'
 
 # OpenAI API parameters
 OPENAI_TOKEN=''
